objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Activity_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Activity_Description_Hover__c</fullName>
        <label>Activity Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Descriptions__c</fullName>
        <label>Activity Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Activity__c</fullName>
        <label>Activity</label>
        <picklist>
            <picklistValues>
                <fullName>Add-on Marketing Priority</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complaint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Defected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Commerce Onboarding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expired Product Return</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Go Direct Outreach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onboarding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order Handling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outbound Marketing Priority</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price Quote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Practice Observation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roundtable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAP transitioned from 2014 VDC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAP transitioned to 2015 VDC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SNAP Pricing Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUTS Inquiry, SUTS Onboarding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trial Signup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discuss Products/Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Gathering/Prospecting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conduct a Demonstration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Close Business paperwork</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FUll Staff Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Troubleshooting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pro-Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPA Event</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Assignee_Role__c</fullName>
        <formula>Owner:User.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assignee Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attachment_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attachment Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Call_Duration_Formatted__c</fullName>
        <formula>IF ((MOD(CallDurationInSeconds,3600)/60)&gt;10, 

TEXT(FLOOR(CallDurationInSeconds/3600)) + &quot;:&quot;, 
TEXT(FLOOR(CallDurationInSeconds/3600)) + &quot;:0&quot;) 

+ IF((MOD(MOD(CallDurationInSeconds,3600),60))&gt;10, 

TEXT( FLOOR(MOD(CallDurationInSeconds,3600)/60)) + &quot;:&quot;, 
TEXT( FLOOR(MOD(CallDurationInSeconds,3600)/60)) + &quot;:0&quot;) 

+ TEXT(MOD(MOD(CallDurationInSeconds,3600),60))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Call Duration Formatted</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Member_Name__c</fullName>
        <label>Campaign Member Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Member_Status__c</fullName>
        <label>Campaign Member Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Action__c</fullName>
        <description>Field for Case Action for Technical Service Activity Task type</description>
        <label>Case Actions</label>
        <picklist>
            <picklistValues>
                <fullName>Corrective Action Initiated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Returning Kit for Investigation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Sending Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Sending Samples</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Sending Software Database</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deviation Report Initiated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discussion with Other IDEXX Groups</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equipment Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installation of Instrument(s)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Response Fom Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Presentation PSRB or ePSRB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retraining via Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduling Conference Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduling Customer Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sending Customer Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sending Replacement Kit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Intervention in our Facilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Intervention in Randox Facilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Intervention on Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipping replacement Instrument</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Testing of Samples/Kits in Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Troubleshooting Discussion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting for Area Manager Follow Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting for Customer Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting for Field Technician Intervention</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Actions__c</fullName>
        <label>Case Actions</label>
        <picklist>
            <picklistValues>
                <fullName>Corrective Action Initiated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Returning Kit for Investigation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Sending Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Sending Samples</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Sending Software Database</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deviation Report Initiated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discussion with Other IDEXX Groups</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equipment Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installation of Instrument(s)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Response Fom Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Presentation PSRB or ePSRB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retraining via Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduling Conference Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduling Customer Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sending Customer Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sending Replacement Kit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Intervention in our Facilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Intervention in Randox Facilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Intervention on Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipping replacement Instrument</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Testing of Samples/Kits in Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Troubleshooting Discussion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting for Area Manager Follow Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting for Customer Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting for Field Technician Intervention</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DSR_Name__c</fullName>
        <label>DSR Name</label>
        <picklist>
            <picklistValues>
                <fullName>sourced from SAP via DW</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_of_Activity__c</fullName>
        <label>Date of Activity</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Decision_Maker__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Decision Maker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Distributor_Ride_With__c</fullName>
        <label>Distributor Ride With</label>
        <picklist>
            <picklistValues>
                <fullName>sourced from SAP via DW</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <picklist>
            <picklistValues>
                <fullName>5 minutes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15 minutes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30 minutes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>45 minutes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 hour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.5 hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.5 hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.5 hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.5 hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.5 hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.5 hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.5 hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8 hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8.5 hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9 hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9.5 hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10.5 hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11 hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11.5 hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12.5 hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13 hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13.5 hours</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interaction_Origin__c</fullName>
        <label>Interaction Origin</label>
        <picklist>
            <picklistValues>
                <fullName>Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inbound Phone Call</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Outbound Phone Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seminar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webinar</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Method__c</fullName>
        <label>Method</label>
        <picklist>
            <picklistValues>
                <fullName>Inbound Phone Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outbound Phone Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eMail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seminar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Notes_textarea__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Outcome_of_the_Call__c</fullName>
        <label>Outcome of the Call</label>
        <picklist>
            <picklistValues>
                <fullName>Z</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Unusual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open Unusual</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Products and Services</label>
        <picklist>
            <picklistValues>
                <fullName>Allergy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catalyst (Dx or One) Analyzer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catalyst CLIPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catalyst singles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CBC5r</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coag Cassettes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coag Dx Analyzer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitive Digital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitive IHD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitive PIMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eCommerce/IOO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fecals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fructosamine Slide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Histology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IDEXX Care Plus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IDEXX PIMS (ICS, Neo, DVMax)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IDEXX Points</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IVLS/IVS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lab Supplies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LaserCyte Analyzer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Literature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MiniSpin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PetDetect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PHN Pro/3D/Petly Plans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Practice Supplies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preventive Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ProCyte Dx Analyzer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ProCyte Reagents</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Reason_For_Visit__c</fullName>
        <label>Reason For Visit</label>
        <picklist>
            <picklistValues>
                <fullName>Critical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Defected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IDEXX Care Plus Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Install</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post Installation Follow-up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Install Site Survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Support and Trial Sign Up</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ride_With__c</fullName>
        <label>Ride With</label>
        <picklist>
            <picklistValues>
                <fullName>DSR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Idexx</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Activity_ID__c</fullName>
        <label>Sales Activity ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Successful__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Was this a successful call with a Top 200 account that satisfies the twice-monthly call requirement?</inlineHelpText>
        <label>Made Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Task_Name__c</fullName>
        <displayFormat>T-{000000}</displayFormat>
        <label>Task Name</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Top_200_Account__c</fullName>
        <label>Top 200 Account</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Call__c</fullName>
        <label>Type of Call</label>
        <picklist>
            <picklistValues>
                <fullName>X</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inbound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outbound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_Reserved_Field__c</fullName>
        <description>Test field</description>
        <inlineHelpText>free form text 50 char</inlineHelpText>
        <label>User Reserved Field</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>selectedcampaign__c</fullName>
        <label>selectedcampaign</label>
        <type>TextArea</type>
    </fields>
    <listViews>
        <fullName>AllActivities</fullName>
        <filterScope>Team</filterScope>
        <label>All Activities</label>
    </listViews>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyOpenActivities</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Open Activities</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <listViews>
        <fullName>UpcomingTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Tasks</label>
        <language>en_US</language>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>